--- a/src/main/resources/telemetry.conf
+++ b/src/main/resources/telemetry.conf
@@ -1,8 +1,6 @@
 cinnamon {
   application = "akka-typed-blog-distributed-state"
 
-  elastic-hosts = "localhost:9200"
-  elastic-hosts = ${?CINNAMON_ELASTIC_HOSTS}
 }
 
 cinnamon.akka.actors {
@@ -44,10 +42,24 @@ cinnamon.akka.cluster {
   split-brain-resolver-events = on
 }
 
+cinnamon.stopwatch {
+  enabled = true
+}
+cinnamon.akka.stream.metrics {
+  async-processing-time = on
+}
+
 cinnamon.akka {
-  persistence.entities {
-    "sharded:ArtifactState" {
-      report-by = group
+  streams {
+    "name:my-stream" {
+      report-by = name
+      flows = on
+    }
+    partial = on
+    metrics {
+      async-processing-time = on
+      demand = on
+      latency = on
     }
   }
 }
