change to local mk.local domain for MiniKube

--- a/gatling/src/test/resources/application.conf
+++ b/gatling/src/test/resources/application.conf
@@ -1,8 +1,8 @@
 loadtest {
   # provides the base URL: http://localhost:8082
-# baseUrl = "http://localhost:8082"
+  baseUrl = "http://localhost:8082"
   # sample baseURL when running locally in docker
-  baseUrl = "http://172.19.0.6:8082"
+  #  baseUrl = "http://172.19.0.6:8082"
   # sample baseURL when running locally in minikube
-#  baseUrl = "http://localhost:8080"
+  #  baseUrl = "http://mk.local:30082"
 }
