--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <scala.binary.version>2.13</scala.binary.version>
         <app.configfile>cluster-application-docker-dns.conf</app.configfile>
         <docker.maven.plugin.version>0.45.0</docker.maven.plugin.version>
-        <tests.skip>true</tests.skip>
+        <tests.skip>false</tests.skip>
         <logback.version>1.2.13</logback.version>
     </properties>
 
